--- a/_includes/comments-providers/discourse.html
+++ b/_includes/comments-providers/discourse.html
@@ -1,3 +1,5 @@
+<script type="text/javascript">
+    alert("here")</script>
 {% if site.comments.discourse.server %}
 {% include base_path %}
 {% capture canonical %}{{ base_path }}{% if site.permalink contains '.html' %}{{ page.url }}{% else %}{{ page.url | remove:'index.html' | strip_slash }}{% endif %}{% endcapture %}
