--- a/_includes/comments-providers/discourse.html
+++ b/_includes/comments-providers/discourse.html
@@ -4,7 +4,7 @@
 {% include base_path %}
 {% capture canonical %}{{ base_path }}{% if site.permalink contains '.html' %}{{ page.url }}{% else %}{{ page.url | remove:'index.html' | strip_slash }}{% endif %}{% endcapture %}
 <script type="text/javascript">
-    alert("here")
+    alert("here2")
     DiscourseEmbed = { discourseUrl: '//{{ site.comments.discourse.server }}/',
                        discourseEmbedUrl: '{{ canonical }}' };
    (function () {
