--- a/_includes/comments-providers/discourse.html
+++ b/_includes/comments-providers/discourse.html
@@ -1,7 +1,7 @@
 
 {% if site.comments.discourse.server %}
 <script type="text/javascript">
-    alert({%  site.comments.discourse.server %})
+    alert("site.comments.discourse.server")
 {% include base_path %}
 {% capture canonical %}{{ base_path }}{% if site.permalink contains '.html' %}{{ page.url }}{% else %}{{ page.url | remove:'index.html' | strip_slash }}{% endif %}{% endcapture %}
 <script type="text/javascript">
