--- a/_sass/_navigation.scss
+++ b/_sass/_navigation.scss
@@ -183,7 +183,8 @@
     display: block;
     margin: 0 1rem;
     padding: 0.5rem 0;
-    color: $masthead-link-color;
+    /*color: $masthead-link-color;*/
+	color:green
     text-decoration: none;
 
     &:hover {
