--- a/_sass/_navigation.scss
+++ b/_sass/_navigation.scss
@@ -184,7 +184,7 @@
     margin: 0 1rem;
     padding: 0.5rem 0;
     /*color: $masthead-link-color;*/
-	color:green;
+	color:rgb(96,144,48);
     text-decoration: none;
 
     &:hover {
