--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -13,7 +13,7 @@
               {% else %}
               {% assign domain = base_path %}
             {% endif %}
-            <li class="masthead__menu-item"><a href="{{ domain }}{{ link.url }}">salam</a></li>
+            <li class="masthead__menu-item"><a href="{{ domain }}{{ link.url }}" style="color:red">{{ link.title }}</a></li>
           {% endfor %}
         </ul>
         <ul class="hidden-links hidden"></ul>
