--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -1,5 +1,5 @@
 {% include base_path %}
-{%color[0]= red;color[1]= red;color[2]= red;color[3]= red;color[4]= red;color[5]= red;color[6]= red;color[7]= red;color[8]= red; %}
+{%assign color = ["red", "blue", "green", "yellow", "black", "white", "pink", "orange", "red", "blue"] %}
 
 <div class="masthead">
   <div class="masthead__inner-wrap">
