--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -14,7 +14,7 @@
               {% else %}
               {% assign domain = base_path %}
             {% endif %}
-			<li class="masthead__menu-item"><a href="{{ domain }}{{ link.url }}" style="color:{{color[loop.index]}}">{{ link.title }}</a></li>
+			<li class="masthead__menu-item"><a href="{{ domain }}{{ link.url }}" style="color:{{color[forloop.index0]}}">{{ link.title }}</a></li>
           {% endfor %}
         </ul>
         <ul class="hidden-links hidden"></ul>
