--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -1,5 +1,5 @@
 {% include base_path %}
-{%assign color = ["red", "blue", "green", "yellow", "black", "white", "pink", "orange", "red", "blue"] %}
+{%assign color = [red|blue|green|yellow|black|white|pink|orange|red|blue]  | split: "|" %}
 
 <div class="masthead">
   <div class="masthead__inner-wrap">
