--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -1,5 +1,5 @@
 {% include base_path %}
-{% assign color = "#66d9ef|#e6db74|#a6e22e|yellow|black|white|pink|orange|red|blue"  | split: "|" %}
+{% assign color = "#66d9ef|#e6db74|#a6e22e|yellow|#ae81ff|white|pink|orange|red|blue"  | split: "|" %}
 
 <div class="masthead">
   <div class="masthead__inner-wrap">
